# starriver

./: .env  .gitignore  Cargo.toml  README.md  clippy.toml  config-dev.toml  config.toml  settings.toml
crates/stariver/: Cargo.toml
crates/stariver-adapter/: Cargo.toml
crates/stariver-adapter/src/: api.rs  assembler.rs  extract.rs  lib.rs  main.rs  username_flow.rs
crates/stariver-adapter/src/api/: authentication.rs  blog.rs  blog_api.rs  blog_model.rs  dictionary.rs  dictionary_api.rs  user.rs
crates/stariver-adapter/src/assembler/: article_assembler.rs  blog.rs
crates/stariver-adapter/src/config/: app_state.rs  extract.rs  user_principal.rs  username_flow.rs
crates/stariver-adapter/src/model/: user.rs
crates/stariver-adapter/src/state/: app_state.rs
crates/stariver-application/: Cargo.toml
crates/stariver-application/src/service/: blog_service.rs  user_service.rs
crates/stariver-core/: Cargo.toml
crates/stariver-core/src/: application.rs  infrastructure.rs
crates/stariver-core/src/application/: blog_service.rs  user_service.rs
crates/stariver-core/src/domain/: blog.rs
crates/stariver-core/src/infrastructure/: security.rs  util.rs
crates/stariver-domain/: Cargo.toml
crates/stariver-domain/src/: blog.rs
crates/stariver-domain/src/blog/: aggregate.rs  entity.rs  repository.rs
crates/stariver-domain/src/user/: aggregate.rs  entity.rs  repository.rs  value_object.rs
crates/stariver/src/: main.rs
crates/starriver/: Cargo.toml
crates/starriver-adapter/: Cargo.toml
crates/starriver-adapter/src/: api.rs  config.rs  lib.rs
crates/starriver-adapter/src/api/: article_handler.rs  authentication.rs  authentication_handler.rs  blog.rs  blog_handler.rs  category_handler.rs  dictionary.rs  dictionary_handler.rs  user.rs  user_handler.rs
crates/starriver-adapter/src/assembler/: blog.rs
crates/starriver-adapter/src/config/: app_state.rs  extract.rs  user_principal.rs  username_flow.rs  username_password_authenticator.rs  username_password_authentictor.rs  username_password_flow.rs
crates/starriver-application/: Cargo.toml
crates/starriver-application/src/: application_service.rs  assembler.rs  db.rs  dto.rs  lib.rs  query.rs  query_service.rs  repository.rs
crates/starriver-application/src/application_service/: article_service.rs  blog_service.rs  category_service.rs  user_service.rs
crates/starriver-application/src/assembler/: blog_assembler.rs
crates/starriver-application/src/db/: article_attachment_do.rs  article_do.rs  blog_attachment_do.rs  blog_do.rs  category_do.rs  user_do.rs  user_security_event_do.rs
crates/starriver-application/src/dto/: article_dto.rs  blog.rs  blog_dto.rs  category_dto.rs  user_dto.rs
crates/starriver-application/src/query/: article_query_service.rs  blog_query_service.rs  category_query_service.rs  user_query_service.rs
crates/starriver-application/src/query_service/: blog_query_service.rs
crates/starriver-application/src/repository/: article_repository.rs  blog_repository.rs  category_repository.rs  user_repository.rs
crates/starriver-application/src/service/: blog_service.rs  user_service.rs
crates/starriver-base/: Cargo.toml
crates/starriver-base/src/: dto.rs  error.rs  error_mapping.rs  lib.rs  model.rs  query.rs  repository.rs  security.rs
crates/starriver-base/src/db/: article_do.rs  user_do.rs  user_security_event_do.rs
crates/starriver-base/src/dto/: article_dto.rs  category_dto.rs  user_dto.rs
crates/starriver-base/src/model/: dto.rs  page.rs  sort.rs  tree.rs
crates/starriver-base/src/query/: article_query_service.rs  category_query_service.rs  user_query_service.rs
crates/starriver-base/src/repository/: article_repository.rs  category_repository.rs  user_repository.rs
crates/starriver-base/src/security/: authentication.rs  password_encoder.rs
crates/starriver-base/src/service/: cache_service.rs  config_service.rs
crates/starriver-base/src/util/: db.rs
crates/starriver-blogging/adapter/: Cargo.toml
crates/starriver-blogging/adapter/src/: config.rs  error_mapping.rs  lib.rs  port_in.rs  port_out.rs
crates/starriver-blogging/application/: Cargo.toml
crates/starriver-blogging/application/src/: dto.rs  error.rs  lib.rs  port.rs  port_out.rs  service.rs  use_case.rs
crates/starriver-blogging/domain/: Cargo.toml
crates/starriver-blogging/domain/src/: attachment.rs  lib.rs  post.rs  shared_error.rs
crates/starriver-domain/: Cargo.toml
crates/starriver-domain/src/: article.rs  blog.rs  common_error.rs  common_traits.rs  lib.rs  user.rs
crates/starriver-domain/src/article/: domain_service.rs  entity.rs  params.rs  repository.rs  value_object.rs
crates/starriver-domain/src/blog/: entity.rs  params.rs  repository.rs  value_object.rs
crates/starriver-domain/src/category/: entity.rs  repository.rs
crates/starriver-domain/src/user/: entity.rs  factory.rs  policy.rs  repository.rs  specification.rs  state_object.rs  value_object.rs
crates/starriver-identity/adapter/: Cargo.toml
crates/starriver-identity/adapter/src/: config.rs  error_mapping.rs  lib.rs  port_in.rs
crates/starriver-identity/application/: Cargo.toml
crates/starriver-identity/application/src/: common.rs  error.rs  lib.rs  port.rs  port_out.rs  service.rs  use_case.rs
crates/starriver-identity/domain/: Cargo.toml
crates/starriver-identity/domain/src/: aggregate.rs  authentication_service.rs  common.rs  (+6 more)
crates/starriver-infrastructure/: Cargo.toml
crates/starriver-infrastructure/src/: domain_state.rs  error.rs  extract.rs  lib.rs  macros.rs  model.rs  security.rs  service.rs  util.rs
crates/starriver-shared-base/: Cargo.toml
crates/starriver-shared-base/src/: authentication.rs  cache.rs  db.rs  dto.rs  error.rs  html_utils.rs  io.rs  lib.rs  random.rs  regex_patterns.rs  repository.rs  upload_file.rs
crates/starriver-shared-framework/: Cargo.toml
crates/starriver-shared-framework/src/: cache.rs  config.rs  db.rs  error_mapping.rs  extract.rs  file_access.rs  io.rs  lib.rs  principal.rs  repository.rs  response.rs  upload_file.rs
crates/starriver/src/: config.rs  main.rs
(+397 files in other folders)
