[workspace]
members = [
    "crates/starriver",
    "crates/starriver-identity/*",
    "crates/starriver-blogging/*",
    "crates/starriver-shared-base",
    "crates/starriver-shared-framework",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
starriver-identity-adapter = { path = "crates/starriver-identity/adapter" }
starriver-blogging-adapter = { path = "crates/starriver-blogging/adapter" }
starriver-shared-base = { path = "crates/starriver-shared-base" }
starriver-shared-framework = { path = "crates/starriver-shared-framework" }

axum = { version = "^0", features = ["macros", "multipart"] }
axum-extra = { version = "^0", features = ["cookie", "form"] }
axum-valid = "^0"
anyhow = "^1"
argon2 = "^0"
chrono = "^0"
config = "^0"
derive-getters = "^0"
futures-util = "^0"
infer = "^0"
jsonwebtoken = { version = "^10", features = ["rust_crypto"] }
lettre = { version = "^0", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
moka = { version = "^0", features = ["future"] }
rand = "^0"
regex = { version = "^1" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sea-orm = { version = "^1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-time", "with-uuid"] }
time = { version = "^0", features = ["serde-human-readable", "serde-well-known"] }
thiserror = "^2"
tokio = { version = "^1", features = ["rt-multi-thread", "net", "fs", "macros", "signal"] }
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter", "json", "local-time"] }
tracing-appender = "^0"
tower = { version = "^0" }
tower-http = { version = "^0", features = ["compression-gzip", "fs", "request-id", "trace"] }
uuid = { version = "^1", default-features = false, features = [ "std", "v7", "fast-rng", "serde", "macro-diagnostics"] }
validator = { version = "^0", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = 0
codegen-units = 256
# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 0
debug = 0
