[package]
name = "stariver-adapter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }

time = { workspace = true }

serde = { workspace = true }

stariver-core = { path = "../stariver-core" }
uuid = { workspace = true }