[package]
name = "stariver-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }

time = { workspace = true }

serde = { workspace = true }

stariver-core = { path = "../stariver-core" }
uuid = { workspace = true }