[package]
name = "stariver-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }

time = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

stariver-application = { path = "../stariver-application" }
stariver-domain = { path = "../stariver-domain" }
stariver-infrastructure = { path = "../stariver-infrastructure" }
tracing = { workspace = true }
uuid = { workspace = true }
