[package]
name = "stariver-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
stariver-domain = { path = "../stariver-domain" }
stariver-infrastructure = { path = "../stariver-infrastructure" }

anyhow = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
