[package]
name = "stariver-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
actix-session = { workspace = true }
anyhow = { workspace = true }

argon2 = "^0"
chrono = { workspace = true }
dotenvy = "^0"
env_logger = "^0"

jsonwebtoken = "^9"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trait-variant = "^0"
tracing = "^0"
tracing-subscriber = "^0"
uuid = { workspace = true }
redis = { version = "0.27.5", features = ["tokio-comp"] }
sha2 = "0.10.8"
hmac = "0.12.1"