[package]
name = "stariver-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }

argon2 = "^0"
time = { workspace = true }

jsonwebtoken = "^9"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = "^0"
hmac = "^0"