[package]
name = "stariver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
ferris-says = "^0"
actix-web = { workspace = true }
actix-session = { workspace = true }
anyhow = { workspace = true }

dotenvy = "^0"
env_logger = "^0"

stariver-adapter = { path = "../stariver-adapter" }
stariver-core = { path = "../stariver-core" }

tracing = "^0"
tracing-subscriber = "^0"