[package]
name = "stariver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
ferris-says = "^0"
actix-web = { workspace = true }

dotenvy = "^0"

stariver-adapter = { path = "../stariver-adapter" }
stariver-infrastructure = { path = "../stariver-infrastructure" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }