[package]
name = "starriver-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = { workspace = true }

time = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

starriver-application = { path = "../starriver-application" }
starriver-domain = { path = "../starriver-domain" }
starriver-infrastructure = { path = "../starriver-infrastructure" }
tracing = { workspace = true }
uuid = { workspace = true }
