[package]
name = "starriver-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-application = { path = "../starriver-application" }
starriver-infrastructure = { path = "../starriver-infrastructure" }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-valid = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
