[package]
name = "starriver-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-domain = { path = "../starriver-domain" }
starriver-infrastructure = { path = "../starriver-infrastructure" }

axum-extra = { workspace = true }
axum-valid = { workspace = true }
bytes = { workspace = true }
infer = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
