[package]
name = "starriver-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-infrastructure = { path = "../starriver-infrastructure" }
anyhow = { workspace = true }
argon2 = { workspace = true }

time = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
