[package]
name = "starriver-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

uuid = { workspace = true }
derive-getters = { workspace = true }
