[package]
name = "starriver-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
hmac = "^0"

jsonwebtoken = { version = "^10", features = ["rust_crypto"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "^0"
time = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
