[package]
name = "starriver-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
config = { workspace = true }
lettre = { version = "^0", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
futures-util = { workspace = true }
hmac = "^0"
jsonwebtoken = { version = "^10", features = ["rust_crypto"] }
moka = { version = "^0", features = ["future"] }
rand = "^0"
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "^0"
strum = { version = "^0", features = ["derive"] }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
