[package]
name = "starriver-shared-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rand = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
