[package]
name = "starriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
starriver-adapter = { path = "../starriver-adapter" }
starriver-infrastructure = { path = "../starriver-infrastructure" }

ferris-says = "^0"
axum = { workspace = true }
mimalloc = { version = "*", features = ["secure"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
