[package]
name = "starriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-identity-adapter = { path = "../starriver-identity/adapter" }
# starriver-blogging-adapter = { path = "../starriver-blogging/adapter" }

axum = { workspace = true }
config = { workspace = true }
mimalloc = { version = "*", features = ["secure"] }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
