[package]
name = "starriver-blogging-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
starriver-shared-base = { workspace = true }
starriver-shared-framework = { workspace = true }
starriver-blogging-application = { path = "../application" }
starriver-blogging-domain = { path = "../domain" }

argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
infer = { workspace = true }
moka = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
