[package]
name = "starriver-blogging-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
starriver-shared-base = { workspace = true }

derive-getters = { workspace = true }
html-escape = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
