[package]
name = "starriver-identity-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-identity-application = { path = "../application" }
starriver-identity-domain = { path = "../domain" }
starriver-shared = { path = "../../starriver-shared" }

axum = { workspace = true }
axum-extra = { workspace = true }
axum-valid = { workspace = true }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
