[package]
name = "starriver-identity-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-identity-application = { path = "../application" }
starriver-identity-domain = { path = "../domain" }
starriver-shared-base = { workspace = true }
starriver-shared-framework = { workspace = true }

argon2 = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-valid = { workspace = true }
moka = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
