[package]
name = "starriver-identity-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
starriver-identity-domain = { path = "../domain" }
starriver-shared-base = { workspace = true }

regex = { workspace = true }
sea-orm = { workspace = true }  # 为了同时支持连接和事务不得已，其它方案更复杂和难以维护
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
